--- a/COMPLETE-WEBSITE.html
+++ b/COMPLETE-WEBSITE.html
@@ -381,6 +381,9 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
+    <!-- Live Features Integration -->
+    <script src="voice-integration/live-features.js"></script>
+    
     <!-- Custom JavaScript for live stats -->
     <script>
         // Live GitHub stats (simulated - replace with real API)
